# o-my-mission-plan

./: .gitignore  AGENTS.md  BEADS.md  DOLT_REMOTE.md  LICENSE  Makefile  README.md  manifest  package-lock.json  package.json  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
.beads/hooks/: commit-msg  commit-msg.cursor  commit-msg.cursor.co-author  pre-commit  pre-commit.cursor
docs/: CIVIL-ROUTE-DEV-GUIDE.md  CONOPS.md  DEMO-WORLD.md  FORCE-APPROACHES.md  INTEGRATION-GUIDE.md  MISSION-ROUTE-DEV-GUIDE.md  NAV-DATA.md  OMY-SIM-ROUTES.md  ORF-SPIKE.md  ROUTE-GENERATION.md  SUPPLIER-ROUTE-TOOLS.md  WAYPOINT-AND-ROUTING-MODEL.md
docs/examples/: gulf-war-psab-001-routes-example.json
docs/screenshots/: README.md
features/: o-my-mission-plan.feature
openspec/: WORKFLOW.md  config.yaml  project.md
openspec/changes/add-conops-options-cycle/: proposal.md  tasks.md
openspec/changes/add-mvp-allocator-route-prop/: design.md  proposal.md  tasks.md
openspec/specs/o-my-mission-plan/: spec.md
scripts/: capture_screenshots.mjs
src/omy_mission_plan/: __init__.py  allocator.py  app.py  archetypes.py  demo_world.py  export_routes.py  geo.py  map_layers.py  models.py  nav_loader.py  options.py  planning.py  propagator.py  route_generator.py  routes_overview.py
src/omy_mission_plan/static/: app.js  index.html  styles.css
src/omy_mission_plan/suppliers/: __init__.py  base.py  costgrid.py  (+3 more)
tests/: test_allocator.py  test_api.py  test_export.py  test_followons_6_10.py  test_issues_13_18.py  test_route_and_fuel.py  test_suppliers_options.py
